Update style.css  adding a margin
i have added a margin negative to -40 px in the header

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,7 @@ h1{
     background-repeat: no-repeat;
     background-position-y: 80%;
     background-blend-mode: multiply ;
+    margin-top:-40px;
 }
 
 .container{
