--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,7 @@ h1{
     background-position: center;
     background-repeat: no-repeat;
     background-position-y: 200px;
+    background-postion-x: 200px;
 }
 
 .container{
