adding to background

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,8 @@ h1{
     background-position: center;
     background-repeat: no-repeat;
     background-position-y: 200px;
-    background-postion-x: 200px;
+    background-blend-mode: multiply;
+    background-blend-mode: multiply;
 }
 
 .container{
