change list color white to pink

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -269,7 +269,7 @@ nav ul li a:hover::after{
 
 .services-list div a{
     text-decoration: none;
-    color: white;
+    color: #ff004f;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
