--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,7 +77,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -339,7 +339,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background: white;
+    background: none;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -458,7 +458,7 @@ nav .fa-solid{
     bottom: 80px;
     right: 20px;
     background-color: #ff004f;
-    color: white;
+    color: #262626;
     border: none;
     border-radius: 50%;
     cursor: pointer;
