--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ h1{
     background-size: auto;
     background-position: cover;
     background-repeat: no-repeat;
-    background-position-x: 700px;
+    background-position-x: 80%;
     background-blend-mode: multiply;
 }
 
