--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,17 +21,10 @@ h1{
 }
 /*---------------------------------------------------------------acceuil----------------------------------------------------------*/
 
-#header{
-    width: 100%;
-    height: 100vh;
-    background-image: url("../IMAGES/profile-pic.png");
-    background-size: auto;
-    background-position: cover;
-    background-repeat: no-repeat;
-    background-position-x: 80%;
-    background-blend-mode: multiply;
+img{
+    margin-top: 40px;
+    margin-left:200px;
 }
-
 .container{
     padding: 20px 10%;
 }
