--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,9 +21,9 @@ h1{
 }
 /*---------------------------------------------------------------acceuil----------------------------------------------------------*/
 
-img{
+#header img{
     margin-top: 40px;
-    margin-left:200px;
+    margin-left:300px;
 }
 .container{
     padding: 20px 10%;
