--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,7 @@ h1{
     border-radius: 10px;
     font-weight: bold;
     border: 1px solid #ff004f;
-    color: white;
+    color: white !important;
 }
 
 .container ul #contact::after{
@@ -71,7 +71,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 18px;
     position: relative;
