--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,8 +22,8 @@ h1{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 80%;
-    background-position-x: 300px;
-    background-position-y: 1000px;
+    background-position-x: 85%;
+    background-position-y:90% ;
 }
 .container{
     padding: 20px 10%;
