change picture background

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@ h1{
 }
 /*---------------------------------------------------------------acceuil----------------------------------------------------------*/
 #header{
-    background-image: url(../IMAGES/profile-cercle.png);
+    background-image: url(../IMAGES/profile-pic.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 80%;
