--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,12 +18,14 @@ h1{
 }
 /*---------------------------------------------------------------acceuil----------------------------------------------------------*/
 #header{
+    width: 100%;
+    height: 100vh;
     background-image: url(../IMAGES/profile-pic.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 80%;
-    background-position-x: 85%;
-    background-position-y:90% ;
+    background-position: 400px;
+    background-position-y:100% ;
+    background-blend-mode: multiply;
 }
 .container{
     padding: 20px 10%;
