--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,7 +21,7 @@ h1{
     width: 100%;
     height: 100vh;
     background-image: url(../IMAGES/profile-pic.png);
-    background-size: cover;
+    background-size: center;
     background-repeat: no-repeat;
     background-position: 400px;
     background-position-y:100% ;
