--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,8 +23,7 @@ h1{
     background-image: url(../IMAGES/profile-pic.png);
     background-size: center;
     background-repeat: no-repeat;
-    background-position: 80%;
-    background-position-y:100% ;
+    background-position: 100px;
     background-blend-mode: multiply;
 }
 .container{
