--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ h1{
     background-image: url(../IMAGES/profile-pic.png);
     background-size: center;
     background-repeat: no-repeat;
-    background-position: 100vh;
+    background-position: 85%;
     background-blend-mode: multiply;
 }
 .container{
