--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,6 +36,7 @@ h1{
     border-radius: 10px;
     font-weight: bold;
     border: 1px solid #ff004f;
+    color:white;
 }
 
 .container ul #contact::after{
