--- a/CSS/style.css
+++ b/CSS/style.css
@@ -251,6 +251,7 @@ nav ul li a:hover::after{
 .services-list div i{
     font-size: 50px;
     margin-bottom: 30px;
+    background-color: white;
 }
 
 .services-list div h2{
