--- a/CSS/style.css
+++ b/CSS/style.css
@@ -251,7 +251,6 @@ nav ul li a:hover::after{
 .services-list div i{
     font-size: 50px;
     margin-bottom: 30px;
-    background-color: white;
 }
 
 .services-list div h2{
@@ -333,7 +332,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background: none;
+    background: white;
     width: 60px;
     height: 60px;
     border-radius: 50%;
