--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -68,7 +68,7 @@ nav .fa-sharp{
 }
 
 nav ul{
-    background: #ff004f;
+    background: #2596be;
     position:absolute;
     top: 0;
     right: -200px;
@@ -162,5 +162,5 @@ form .btn2 {
     margin-top: 20px;
     cursor: pointer;
     background-color: black !important;
-    border: 1px solid #ff004f;
+    border: 1px solid #2596be;
 }
