--- a/CSS/tablette.css
+++ b/CSS/tablette.css
@@ -30,7 +30,7 @@ nav{
 
 
 .falandy{
-    color: #ff004f;
+    color: #2596be;
     font-weight: bolder;
 }
 
@@ -115,7 +115,7 @@ nav{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #2596be;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -173,7 +173,7 @@ nav{
 }
 
 .services-list div:hover{
-    background: #ff004f;
+    background: #2596be;
     transform: translateY(-30px);
 }
 /*--------------------------------------------------Blog----------------------------------------------------*/
@@ -191,7 +191,7 @@ nav{
 }
 
 .Blog h4{
-    color:#ff004f;
+    color:#2596be;
 }
 
 .Blog img{
@@ -205,7 +205,7 @@ nav{
 .layer{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6),#ff004f);
+    background: linear-gradient(rgba(0, 0, 0, 0.6),#2596be);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -232,7 +232,7 @@ nav{
 
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #2596be;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -251,7 +251,7 @@ nav{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #2596be;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -260,7 +260,7 @@ nav{
 }
 
 .btn:hover{
-    background: #ff004f;
+    background: #2596be;
 }
 
 /*-----------------------------------------contact---------------------------------------*/
@@ -277,7 +277,7 @@ nav{
 }
 
 .contact-left p i{
-    color: #ff004f;
+    color: #2596be;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -296,13 +296,13 @@ nav{
 }
 
 .social-icons a:hover{
-    color: #ff004f;
+    color: #2596be;
     transform: translateY(-5px);
 }
 
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #2596be;
 }
 
 .contact-right form{
@@ -327,11 +327,11 @@ form .btn2{
     margin-top: 20px;
     cursor: pointer;
     background-color: black !important;
-    border: 1px solid #ff004f;
+    border: 1px solid #2596be;
 }
 
 form .btn2::after{
-    background: #ff004f;
+    background: #2596be;
     font-size: 20px;
 }
 
@@ -348,13 +348,12 @@ nav .fa-solid{
     display: none;
 }
 
-/* Ajouter ce style pour le bouton */
 #scrollToTopButton {
     display: none;
     position: fixed;
     bottom: 80px;
     right: 20px;
-    background-color: #ff004f;
+    background-color: #2596be;
     color: white;
     border: none;
     border-radius: 50%;
@@ -365,6 +364,6 @@ nav .fa-solid{
   }
   
   #scrollToTopButton:hover {
-    background-color: #d60046;
+    background-color: #2596be;
   }
   
