--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,7 +1,7 @@
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url("../IMAGES/profile-cercle.png");
+    background-image: url("../IMAGES/profile-pic-square.png");
     background-size: 80%;
     background-position: center;
     background-position-y: 25%;
@@ -34,10 +34,12 @@ nav ul .fa-solid{
     cursor: pointer;
 }
 div #info{
-    margin-top: 60vh;
+    margin-top: 50vh;
     font-size: 15px !important;
-    text-align:center;
+    width: 100%;
+    text-align: center;
 }
+
 
 .falandy{
     font-weight: 100;
@@ -55,6 +57,12 @@ div #info{
     display:inline;
     width: 100%;
     font-weight: bold;
+}
+
+
+#info p{
+    font-weight: bold;
+    font-size: 18px;
 }
 
 nav .fa-solid{
@@ -78,6 +86,8 @@ nav ul{
     z-index: 2;
     transition: all 0.5s ease;
 }
+
+
 
 .container{
     padding: 6px 8px;
@@ -110,11 +120,7 @@ nav ul{
     margin-top: 50px;
 }
 
-.about-col-2{
-    font-size: 14px;
-    font-size: 14px;
-    word-break: break-word;
-}
+
 
 .tab-links{
     font-size: 16px;
