--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,6 +53,7 @@ nav{
 .falandy{
     color: #095bf5;
     font-weight: bolder;
+    margin-right: 30%;
 }
 
 h2{
@@ -94,6 +95,7 @@ nav ul li a:hover::after{
 #info{
     margin-top: 15%;
     font-size: 30px;
+    width: 59%;
 }
 
 #info h2{
@@ -234,7 +236,7 @@ nav ul li a:hover::after{
 
 .services-list{
     display: grid;
-    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    grid-template-columns: repeat(2, minmax(250px, 1fr));/*3 modifie pour le moment en 2*/
     grid-gap: 40px;
     margin-top: 50px;
 }
@@ -384,8 +386,10 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 
-.social-icons a{
+a{
     text-decoration: none;
+}
+.social-icons a{
     font-size: 30px;
     margin-right: 15px;
     color:#423e3e;
