--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,133 +1,164 @@
-#header{
+#header {
     width: 100%;
     height: 100vh;
     background-image: url("../IMAGES/profile-pic-square.png");
     background-size: 80%;
     background-position: center;
     background-position-y: 25%;
-    margin-bottom:130px;
+    margin-bottom: 130px;
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-nav ul li a{
-    color: white;
+nav ul li a {
+    color: white !important;
     text-decoration: none;
-    font-size: 18px;
-    position: relative;
-    font-weight: bold;
+    font-size: 25px !important;
+    font-weight: bolder !important;
 }
 
-nav ul li{
-    display: block;
-    margin: 25px;
+nav ul li {
+    margin: 10px;
 }
 
-nav ul .fa-solid{
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    cursor: pointer;
-}
-div #info{
+div #info {
     margin-top: 50vh;
     font-size: 15px !important;
     width: 100%;
     text-align: center;
 }
 
-
-.falandy{
+.falandy {
     font-weight: 100;
     font-weight: bold;
 }
 
-#info h2{
+#info h2 {
     font-size: 30px;
     margin-top: 10px;
 }
 
-#info h3{
+#info h3 {
     font-size: 15px;
     margin-top: 150px;
-    display:inline;
+    display: inline;
     width: 100%;
     font-weight: bold;
 }
 
-
-#info p{
+#info p {
     font-weight: bold;
     font-size: 18px;
 }
-
-nav .fa-solid{
-    display: block;
-    font-size: 25px;
-}
-
-nav .fa-sharp{
-    display: block;
-    font-size: 40px;
-}
-
-nav ul{
+nav ul {
     background: #2596be;
-    position:absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 105vh;
+    position: fixed;
     top: 0;
-    right: -200px;
-    width: 200px;
-    height: 90vh;
-    padding-top:50px ;
-    z-index: 2;
+    left: 0;
+    z-index: 1000;
     transition: all 0.5s ease;
 }
 
+nav ul.show {
+    height: 100vh;
+    flex-direction: column;
+    padding-top: 80px;
+}
+
+nav ul li {
+    margin: 10px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.navbar-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.profile-image {
+    margin-bottom: 10px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    display: block;
+}
+
+.navbar-toggler.close-toggler {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+
+.navbar-toggler.close-toggler span {
+    display: block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.navbar-nav.show + .close-toggler {
+    display: block;
+}
+
+nav ul li.active {
+    border-bottom: 2px solid white;
+}
 
 
-.container{
+
+.container {
     padding: 6px 8px;
 }
 
-.container ul #contact{
+.container ul #contact {
     padding: 10px 0;
     border: none;
     background: none;
 }
 
-.sous-titre{
+.sous-titre {
     font-size: 35px;
 }
 
-.about-col-1, .about-col-2{
-    flex-basis: 100%;
+#profile{
+    width: 100%;
+    height: fit-content;
 }
 
-.about-col-1{
-    margin-bottom: 30px;
-    margin: 10px;
-    margin-top:-150px;
+#texte{
+    text-align: justify;
 }
 
-.about-col-1 img{
-    width:100%;
-    border-radius: 15px;
-    height: 60vh;
-    margin-top: 50px;
-}
-
-
-
-.tab-links{
+.tab-links {
     font-size: 16px;
     margin-right: 30px;
 }
 
-.services-list{
+.services-list {
     margin: 20 20px;
     display: grid;
     grid-template-columns: repeat(1, minmax(250px, 1fr));
@@ -135,38 +166,37 @@ nav ul{
     margin-top: 50px;
 }
 
-.Blog-list{
+.Blog-list {
     display: grid;
     grid-template-columns: repeat(1, minmax(240px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
 
-.contact-left, .contact-right{
+.contact-left,
+.contact-right {
     flex-basis: 100%;
 }
 
-.copyright{
-   font-size: 14px;
+.copyright {
+    font-size: 14px;
 }
 
-
-#sidemenu {
-	position: fixed;
-	width: 30vw;
-	height: 110vh;
-	right: -30vw;
-    top:-20px;
-    font-weight: bold;
-}
-
-
-  
 form .btn2 {
     padding: 14px 100px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
-    background-color: black !important;
     border: 1px solid #2596be;
 }
+
+
+#scrollToTopButton {
+    width: 45px;
+    height: 45px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    padding: 10px;
+}
+
