--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -60,7 +60,7 @@ nav ul {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     position: fixed;
     top: 0;
     left: 0;
