--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -152,17 +152,14 @@ nav ul li.active {
 
 #profile{
     width: 100%;
-    height: fit-content;
+    min-height: 500px;
 }
 
 #texte{
     text-align: justify;
 }
 
-.tab-links {
-    font-size: 16px;
-    margin-right: 30px;
-}
+
 
 .services-list {
     margin: 20 20px;
