--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,11 +1,10 @@
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url("../IMAGES/profile-pic-square.png");
+    background-image: url("../IMAGES/profile-pic.png");
     background-size: 80%;
     background-position: center;
-    background-position-y: 25%;
-    margin-bottom: 130px;
+    background-position-y: 100px;
 }
 
 body {
@@ -17,8 +16,8 @@ body {
 nav ul li a {
     color: white !important;
     text-decoration: none;
-    font-size: 25px !important;
-    font-weight: bolder !important;
+    font-size: 25px;
+    font-weight: bolder;
 }
 
 nav ul li {
@@ -27,13 +26,12 @@ nav ul li {
 
 div #info {
     margin-top: 50vh;
-    font-size: 15px !important;
+    font-size: 15px;
     width: 100%;
     text-align: center;
 }
 
 .falandy {
-    font-weight: 100;
     font-weight: bold;
 }
 
@@ -152,7 +150,7 @@ nav ul li.active {
 
 #profile{
     width: 100%;
-    min-height: 500px;
+    min-height: 200px;
 }
 
 #texte{
@@ -193,13 +191,9 @@ form .btn2 {
     border: 1px solid #2596be;
 }
 
-
-#scrollToTopButton {
-    width: 45px;
-    height: 45px;
-    position: fixed;
-    bottom: 10px;
-    right: 15px;
-    padding: 10px;
+#scrollToTopButton{
+    width: 40px;
+    height: 40px;
+    padding: 7px;
+    bottom: 70px;
 }
-
