--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,12 +21,13 @@ h1{
     width: 100%;
     height: 100vh;
     background-image: url(../IMAGES/profile-pic.png);
-    background-size: center;
+    background-size: 500px;
     background-repeat: no-repeat;
-    background-position: 90%;
+    background-position: 820px;
     background-blend-mode: multiply;
-    background-position-y:100px;
+    background-position-y:130px;
 }
+
 .container{
     padding: 20px 10%;
 }
@@ -36,7 +37,7 @@ h1{
     border-radius: 10px;
     font-weight: bold;
     background: #095bf5;
-    color:white;
+    color:white !important;
 }
 
 .container ul #contact::after{
@@ -67,7 +68,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: black;
+    color:gray !important;
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -79,6 +80,7 @@ nav li a #contact{
 
 nav ul li a::after{
     content: '';
+    color: white !important;
     width: 0;
     height: 3px;
     background: #095bf5;
@@ -96,6 +98,7 @@ nav ul li a:hover::after{
     margin-top: 15%;
     font-size: 30px;
     width: 59%;
+    color: gray;
 }
 
 #info h2{
@@ -148,6 +151,7 @@ nav ul li a:hover::after{
 #about{
     padding: 2% 0;
     margin-top: 10px;
+    color: gray;
 }
 
 .row{
@@ -157,8 +161,8 @@ nav ul li a:hover::after{
 }
 
 .col-md-6 img{
-    margin-top: 10px;
-    height: 310px;
+    margin-top: 7px;
+    height: 400px;
     width: 350px;
     right: 0;
 }
@@ -166,65 +170,14 @@ nav ul li a:hover::after{
 .sous-titre{
     font-size: 60px;
     font-weight: 600;
-    text-align: center;
 }
 
 /*----------------------------------------------------competences-------------------------------------------------------*/
 
-.resume-section {
-    text-align: center;
-    font-size: 1.2rem;
-    color: #4f4f4f;
-    font-family: "Poppins", sans-serif;
-  }
 
-  .list-inline {
-    list-style: none;
-  }
-  
-  .list-icons {
-    font-size: 2.5rem;
-  }
-  
-  #skill-bars {
-    width: 50%;
-    margin: 0 auto;
-  }
-  
-  .progress-bar,
-  .btn {
-    background-image: linear-gradient(
-      to right,
-      #3594dc,
-      #1874cd
-    );
-  }
-  
-  .fa-user-tag,
-  .blue,
-  .list-inline-item i:hover {
-    color: #5fb4e8;
-    transition: all 0.2s ease-in-out;
-  }
-  /*---------------------------Style pour la section Expérience------------------------------------- */
-#experience {
-    padding: 5%;
-}
 
-/* Style pour les éléments d'expérience */
-.experience-item {
-    margin-bottom: 30px;
-}
 
-.experience-item h2 {
-    font-size: 24px;
-    margin-bottom: 5px;
-}
 
-.experience-item p {
-    margin-bottom: 10px;
-    font-size: 16px;
-}
 
 /* --------------------------------------------------------services-------------------------------------------------- */
 #service{
@@ -242,14 +195,16 @@ nav ul li a:hover::after{
 .services-list{
     display: flex;
     gap: 40px;
+    color: gray !important;
 }
 
 .services-list div{
-    background: gray;
-    color: white;
-    padding: 40px;
-    font-size: 13px;
-    font-weight: 300;
+    margin-top: 50px;
+    /*color: black;*/
+    border:2px solid #262626;
+    padding: 30px;
+    font-size: 15px;
+    font-weight: 400;
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
 }
@@ -275,6 +230,7 @@ nav ul li a:hover::after{
 
 .services-list div:hover{
     background: #095bf5;
+    color: white;
     transform: translateY(-30px);
 }
 
@@ -295,6 +251,7 @@ nav ul li a:hover::after{
     position:relative;
     overflow: hidden;
     align-self: center;
+    color: gray;
 }
 
 .Blog h4{
@@ -304,6 +261,7 @@ nav ul li a:hover::after{
 .Blog img{
     width: 100%;
     height:350px;
+    border: 2px solid rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     display: block;
     transform: transform 0.5s;
@@ -327,6 +285,8 @@ nav ul li a:hover::after{
     font-size: 14px;
     transition: height 0.5s;
     color: white;
+    border: 2px solid rgba(0, 0, 0, 0.6);
+
 }
 
 .Blog:hover img{
@@ -377,16 +337,20 @@ nav ul li a:hover::after{
     flex-basis: 35%;
 }
 
+.contact-left a{
+    color: gray;
+}
+
 .contact-right{
     flex-basis: 60%;
 }
 
 .contact-left p{
     margin-top: 30px;
+    color: gray;
 }
 
 .contact-left p i{
-    color: #095bf5;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -398,10 +362,11 @@ nav ul li a:hover::after{
 a{
     text-decoration: none;
 }
+
 .social-icons a{
     font-size: 30px;
     margin-right: 15px;
-    color:#423e3e;
+    color:gray;
     display: inline-block;
     transition: transform 0.5s;
 }
@@ -425,10 +390,10 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: #262626;
+    border:2px solid #262626;
     padding: 15px;
     margin: 15px 0;
-    color: white;
+    color: #262626;
     font-size: 18px;
     border-radius: 6px;
 }
@@ -474,16 +439,16 @@ nav .fa-solid{
     padding: 15px;
     font-size: 20px;
     z-index: 999;
-  }
-  
-  #scrollToTopButton:hover {
-    background-color: #095bf5;
-  }
+}
 
-  ::-webkit-scrollbar{
-    width: 8px;
+#scrollToTopButton:hover {
+background-color: #095bf5;
+}
+
+::-webkit-scrollbar{
+width: 8px;
 }
 
 ::-webkit-scrollbar-thumb{
-    background-color:#095bf5;
+background-color:#095bf5;
 }
