--- a/CSS/style.css
+++ b/CSS/style.css
@@ -162,7 +162,7 @@ nav ul li a:hover::after{
 
 .col-md-6 img{
     margin-top: 7px;
-    height: 400px;
+    height: auto;
     width: 350px;
     right: 0;
 }
