--- a/CSS/tablette.css
+++ b/CSS/tablette.css
@@ -1,22 +1,67 @@
 /* Styles pour écrans de taille moyenne (tablettes) */
-
-#header {
-    background-image: url(none);
+@import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Montserrat:wght@800&family=Raleway:wght@300;500;600&family=Shadows+Into+Light&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    background-color: white;
+    margin: auto !important;
+	background:#111;
+}
+
+h1{
+    color:#095bf5 !important;
+}
+
+#header {
+    width: 100%;
+    height: 100vh;
+    background-image: url("../IMAGES/profile-pic-2.png");
+    background-size: 80%;
+    background-position: cover;
+    background-position-x: center;
+    background-position-y: 180px;
+}
 .container {
     padding: 30px 50px;
 }
 
 div #info {
-    margin-top: 50%;
+    margin-top: 70%;
     font-size: 15px !important;
     width: 100%;
     text-align: center;
 }
 
-.col-md-6{
-    text-align: justify;
+
+nav ul {
+	background:#111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 102vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    transition: all 0.7s ease;
+}
+
+.container ul #contact{
+    padding: 0;
+    border-radius:0;
+    font-weight:normal;
+    background:none;
+    color:gray !important;
 }
 
 .col-md-6 img{
@@ -41,17 +86,18 @@ div #info {
     width: 100%;
 }
 
-.btn {
-    margin: 30px auto;
-    padding: 12px 40px;
+
+.copyright {
+    font-size: 14px;
 }
 
-#contact1 .row{
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
+form .btn2 {
+    padding: 14px 100px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+    border: 1px solid #2596be;
 }
-
 .social-icons {
     margin-top: 20px;
 }
